# walid_lib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pull_request.yml  release.yml
src/walid_lib/: __init__.py
tests/: test_main_function.py
