[project]
name = "walid-lib"
version = "1.0.2-rc.2+d60ea39" # Do not change manually !!
description = "Python package to test semver and conventionnal commits"
readme = "README.md"
authors = [
    { name = "walidzbiri", email = "walid.zbiri@uit.ac.ma" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
]

[project.scripts]
walid-lib = "walid_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "python-semantic-release>=10.2.0",
]

[project.optional-dependencies]
build = ["uv ~= 0.7.18"]


[tool.semantic_release]
version_toml=[
    "pyproject.toml:project.version:nf"
]
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""


[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false


[tool.semantic_release.branches.others]
match = ".+"
prerelease = true
prerelease_token = "rc"